<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004750"
    android:gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".WeatherActivity"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/weather_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:paddingRight="12dp"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-36dp"
            android:gravity="center_horizontal"
            android:text="15"
            android:textColor="@color/white"
            android:textSize="72sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sarajevo"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/weather_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Sunny"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/weather_condition_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_wi_day_sunny" />

        <TextView
            android:id="@+id/tempmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxtemp"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tempmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mintemp"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brzvjet"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/razina_vlage"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pritisak"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/weather_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="70dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/location_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".75"
            android:backgroundTint="@color/white"
            android:hint="@string/weather_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/transparentWhite"
            android:textSize="18sp" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_gravity="bottom"

        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFC107"
        app:itemTextColor="#000000"
        app:menu="@menu/bottom_navigation" />
    <Button
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#FFC107"
        android:drawableTop="@drawable/ic_search_black_24dp"
        android:text="@string/tra_i"
        android:textSize="8dp"
        app:fabSize="normal" />



</FrameLayout>
